@@ -94,6 +94,12 @@ issquare(O(x))
 issquare(x+O(x^2))
 issquare(4*x^2+O(x^3))
 issquare(4/x^2)
+if (issquare(x^0/4,&z),z)
+if (issquare((x+1/2)^2,&z),z)
+if (issquare(x^0/4,&z),z)
+issquare(Mod(1,4)*x^2)
+issquare(Mod(1,4)*(x+1)^2)
+
 ispower(-8,4)
 if(ispower(-8,3,&z),z)
 ispower(-8/27,3)
