@@ -84,6 +84,7 @@ BA 60- ellcard over non-prime fields of large char could return wrong results
    63- (1+I)*(1+1/2*I) => wrong result (type errors) [#1619]
    64- contfracpnqn([a]) => [1,a;0,1] instead of [a,1;1,0]
    65- primes([2^50, 2^50+200000]) => stack overflow
+   66- issquare((x+1/2)^2,&z); z => 1.0*x+0.5 instead of x+1/2
 
   Added
     1- add optional argument to sumdigits to specify the base
